# defaultconf

./: .gitignore  Makefile  README.md  _bsdnet.c  _bsdnetlink.c  pyproject.toml  setup.py
etc/rc.d/: defaultconf
samples/: dhclient-enter-hooks  ppp.linkdown  ppp.linkup
src/defaultconf/: bsdcommon.py  bsdnet.py  bsdnetlink.py  bsdroute.py  common.py  daemon.py  defaultconf.py
