[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "defaultconf"
version = "0.1"
authors = [
  { name="Drew Gochenaur" }
]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=5.0",
    "filelock"
]

[project.scripts]
defaultconf = "defaultconf.defaultconf:main"
bsdroute = "defaultconf.bsdroute:main"
bsdnetlink = "defaultconf.bsdnetlink:main"
